# bwa

./: Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  bwape.c  bwase.c  bwaseqio.c  bwtaln.c  config.h  config.h.in  config.status  configure  configure.in  goby.c  goby.h  kseq.h
bwt_gen/: Makefile.in
m4/.svn/: all-wcprops  entries
